Fix font colour contrast CleanDark
Fixes the visibility of card titles when card is opened for CleanDark theme as was inheriting black title from CleanLight theme. 
Title now is white to match and heavily contrast theme.

--- a/client/components/boards/boardColors.css
+++ b/client/components/boards/boardColors.css
@@ -3492,7 +3492,7 @@ THEME - Clean Light
 
 .board-color-cleandark .card-details-header {
   background: #2E2E39 !important;
-  color: rgba(255, 255, 255, 1);
+  color:#FFF !important;
 }
 
 .board-color-cleanlight .card-details-header .card-details-title,
